# VideoBrain

./: .gitignore  README.md
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/core/: agent.py  video_processor.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  Sidebar.jsx  VideoUploader.jsx
